# cadenza-analytics-python

./: .gitignore  .pylintrc  CHANGELOG.md  DEVELOPMENT.md  README.md  build_docs.sh  build_docs_copy.sh  pyproject.toml
.github/workflows/: branchOffCadenzaVersion.yml  ci.yml  docs.yml  githubpages.yml  pylint.yml  release.yml
docs/: index.html  intro.md
examples/: .dockerignore  dockerfile  requirements.txt
examples/calculation/: requirements.txt
examples/calculation/extension/: example_extensions.py
examples/data/: Dockerfile
examples/data/extension/: example_extensions.py
examples/enrichment/: Dockerfile
examples/enrichment/extension/: example_extensions.py
examples/extension/: example_extensions.py  image-example-extension.py  image_example_extension.py
examples/visual/extension/: example_extensions.py
examples/visualization/: requirements.txt
examples/visualization/extension/: example_extensions.py
src/cadenzaanalytics/: __init__.py  cadenza_analytics_extension.py  cadenza_analytics_extension_service.py  version.py
src/cadenzaanalytics/data/: analytics_extension.py  attribute_group.py  attribute_role.py  column_metadata.py  data_container_metadata.py  data_object.py  data_type.py  extension_type.py  geometry_type.py  measure_aggregation.py  parameter.py  parameter_type.py  parameter_value.py  parameter_value_type.py  table.py
src/cadenzaanalytics/request/: analytics_request.py  request_metadata.py  request_parameter.py  request_table.py  view_parameter.py
src/cadenzaanalytics/response/: calculation_response.py  csv_response.py  data_response.py  enrichment_response.py  error_response.py  extension_data_response.py  extension_response.py  image_response.py  missing_metadata_strategy.py  row_wise_mapping_csv_response.py  text_response.py  url_response.py
src/cadenzaanalytics/tests/: __init__.py  test_csv.py  test_csv_roundtrip.py  test_csv_writer.py
src/cadenzaanalytics/util/: __init__.py  csv.py
