[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "cadenzaanalytics"
authors = [
    "Julian Janßen <julian.janssen@disy.net>",
    "Daniel Dittmar <daniel.dittmar@disy.net>",
    "Matthias Budde <matthias.budde@disy.net>"
]
version="10.3.0a0.dev"
description = "Official Python Package for creation of disy Cadenza analytics extensions"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.3.3"
Werkzeug = "3.0.4"
Flask-Cors = "3.0.10"
requests-toolbelt = "1.0.0"
pandas = " ^2.0.2"

[project]
name = "cadenzaanalytics"

[project.urls]
Repository = "https://github.com/DisyInformationssysteme/cadenza-analytics-python"

[tool.poetry_bumpversion]
