[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "cadenzaanalytics"
authors = [
    "Disy Informationssysteme GmbH <cadenza-analytics@disy.net>",
]
version="10.4.0a0.dev0"
description = "Official Python Package for creation of disy Cadenza analytics extensions"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "2.3.3"
Werkzeug = "3.0.4"
Flask-Cors = "3.0.10"
requests-toolbelt = "1.0.0"
pandas = " ^2.0.2"
chardet = "5.2.0"

[project]
name = "cadenzaanalytics"

[project.urls]
Repository = "https://github.com/DisyInformationssysteme/cadenza-analytics-python"

[tool.poetry_bumpversion]
